<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_edit_information"
        android:title="@string/menuEditInformation"
        app:showAsAction="always"
        android:icon="@drawable/ic_edit"
        android:visible="true"/>

    <item
        android:id="@+id/menu_delete_film"
        android:title="@string/menuDeleteFilm"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete"
        android:visible="true"/>

    <item
        android:id="@+id/menu_discard_changes"
        android:title="@string/menuDiscardChanges"
        app:showAsAction="always"
        android:icon="@drawable/ic_discard"
        android:visible="false"/>

    <item
        android:id="@+id/menu_save_changes"
        android:title="@string/menuSaveChanges"
        app:showAsAction="always"
        android:icon="@drawable/ic_save"
        android:visible="false"/>
</menu>